--- a/.gitignore
+++ b/.gitignore
@@ -223,4 +223,6 @@ venv.bak/
 .config/
 .media/
 .idea/
+.static_root/
+secrets.tar
 # End of https://www.gitignore.io/api/macos,linux,python,django,pycharm
