edit travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: python
 python:
 - 3.6
-
 before_install:
 - openssl aes-256-cbc -K $encrypted_d60fb473bc42_key -iv $encrypted_d60fb473bc42_iv
   -in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
-
 install:
-- pip install -r requirements.txt
-
+- pip install -r .requirements/deploy.txt
+env:
+- DJANGO_SETTINGS_MODULE=config.settings.travis
 script:
+- python manage.py migrate
 - python manage.py test
-
 before_script:
+- psql -c "CREATE DATABASE travisci" -U postgres
 - cd nanum
