elasticbeanstalk 브랜치 환경 추가

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,8 @@
 branch-defaults:
   dev-siwon:
     environment: EB-Docker-Deploy-Master
+  master:
+    environment: EB-Docker-Deploy-Master
 environment-defaults:
   EB-Docker-Deploy-Master:
     branch: null
