ADD: Celery + Sendgrid를 활용한 PasswordReset API 구현

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,4 +1,6 @@
 branch-defaults:
+  dev-mark:
+    environment: EB-Docker-Deploy-Master
   dev-siwon:
     environment: EB-Docker-Deploy-Master
   master:
