--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   -in secrets.tar.enc -out secrets.tar -d
 - tar xvf secrets.tar
 install:
-- pip install -r .requirements/deploy.txt
+- pip install -r .requirements/dev.txt
 env:
 - DJANGO_SETTINGS_MODULE=config.settings.travis
 script:
